/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://simulation.tudelft.nl/maven/')
    }
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
    maven {
        url = uri('https://repo.jenkins-ci.org/public/')
    }
}

dependencies {
    api libs.commons.beanutils.commons.beanutils
    api libs.commons.logging.commons.logging
    api libs.net.java.abeille.abeille
    api libs.com.jgoodies.jgoodies.common
    api libs.com.jgoodies.forms
    api libs.com.formdev.flatlaf
    api libs.com.thoughtworks.xstream.xstream
    api libs.org.apache.ant.ant
}

group = 'net.sf.launch4j'
version = '3.51'
description = 'Launch4j'
java.sourceCompatibility = JavaVersion.VERSION_1_8

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}
